
syntax = "proto3";

message message {
    string message = 1;

    enum message_type {
        Public = 0;
        Private = 1;
    }
    message_type mt = 2;
}

message subscribe_message {
    repeated message messge = 1;
}

message dissubscribe_message {
    string message_name = 1;
}

message dispatch_message {
    bytes text = 1;
}
